fixed issue with text alignment
fixed an issue with text not havig correct margin

--- a/aboutMe.css
+++ b/aboutMe.css
@@ -21,7 +21,7 @@
         display: flex;
         justify-content: center;
         min-width: 100%;
-        min-height: auto;
+        height: 500px;
         margin: 50px 50px;
         padding: 25px 25px;
         /* border: 2px solid black; */
@@ -64,6 +64,7 @@
     }
 }
 
+/* mobile styling */
 
 @media screen and (max-width: 1000px){
     .wrapperAboutMe {
@@ -108,12 +109,13 @@
     
     .aboutMeData {
         display: flex;
-        max-width: 300px;
+        width: 300px;
         height: auto;
         font-size: 15px;
         margin-top: 20px;
         margin-bottom: 20px;
-        padding: 2% 2% 2% 2%;
+        margin-left: auto;
+        margin-right: auto;
     }
     
     .myValues {
